--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'org.greenrobot.greendao' // apply greenDao plugin
-apply from: 'and-res-guard.gradle'
+//apply from: 'and-res-guard.gradle'
 
 def keyFile = file(findProperty("tianma.keystore.path") as String)
 def propertyFile = file(findProperty("tianma.signature.path") as String)
@@ -15,13 +15,14 @@ def static releaseTime() {
 }
 
 android {
+    namespace "com.github.xtjun.xposed.forwardSms"
     compileSdkVersion 29
     defaultConfig {
         applicationId "com.github.xtjun.xposed.forwardSms"
         minSdkVersion 23
         targetSdkVersion 27
-        versionCode 5
-        versionName "0.0.5"
+        versionCode 6
+        versionName "0.0.6"
 
         buildConfigField("String", "LOG_TAG", "\"xposedForwardSms\"")
         buildConfigField("int", "MODULE_VERSION", "45")
@@ -38,6 +39,12 @@ android {
     }
 
     signingConfigs {
+        debug {
+            storeFile file('C:\\Users\\alphi\\alphi.jks')
+            storePassword '204200'
+            keyAlias 'alphi'
+            keyPassword '204200'
+        }
         release {
             storeFile keyFile
             storePassword keyProps['STORE_PASSWORD']
@@ -139,6 +146,8 @@ ext {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.test.ext:junit:1.1.5'
+    testImplementation 'junit:junit:4.13.2'
     implementation "androidx.appcompat:appcompat:1.0.2"
     implementation "com.google.android.material:material:1.0.0" // material design support
     implementation "androidx.recyclerview:recyclerview:1.0.0" // recycler view
@@ -148,8 +157,10 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:1.1.3" // constraint layout
 
     // ButterKnife
-    implementation "com.jakewharton:butterknife:$butterKnifeVersion"
-    annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
+//    implementation "com.jakewharton:butterknife:$butterKnifeVersion"
+    androidTestImplementation 'junit:junit:4.12'
+    androidTestImplementation 'junit:junit:4.12'
+//    annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
 
     // Xposed
     compileOnly 'de.robv.android.xposed:api:82'
