--- a/build.gradle
+++ b/build.gradle
@@ -2,33 +2,35 @@
 
 buildscript {
     
+    ext {
+        agp_version = '8.2.0'
+    }
     repositories {
         google()
-        jcenter()
         mavenCentral() // add repository
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.2'
+        classpath "com.android.tools.build:gradle:$agp_version"
         
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'org.greenrobot:greendao-gradle-plugin:3.3.0' // greenDao plugin
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.3.1' // greenDao plugin
 
-        classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.20' // AndResGuard
+//        classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.27' // AndResGuard 废弃
     }
 }
 
 allprojects {
     repositories {
         google()
-        jcenter()
-        maven {
-            url "https://jitpack.io"
-        }
+        mavenCentral()      // jCentral 已废弃
+        maven { url "https://jitpack.io" }
+        maven { url 'https://repo1.maven.org/maven2' }
+        maven { url "https://api.xposed.info/" }
     }
 }
 
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
