--- a/gradle.properties
+++ b/gradle.properties
@@ -12,9 +12,10 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 # R8 Android code shrinker
-android.enableR8=true
+#android.enableR8=true      // Default true
 android.useAndroidX=true
 android.enableJetifier=true
+android.defaults.buildfeatures.buildconfig=true
 
 # Custom Properties start
 tianma.keystore.path=/Users/tianma/Codes/Keystore/tianma.jks
